[gd_scene load_steps=10 format=2]

[ext_resource path="res://Misc/Fonts/SquarleyEdited.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Misc/Fonts/coolvetica rg.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Screens/Login/Login.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 4 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 204.0
margin_top = 219.0
margin_right = 404.0
margin_bottom = 389.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 88.0

[node name="Status" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0.121569, 0.121569, 0 )
custom_fonts/font = SubResource( 8 )
text = "error"
align = 1
valign = 1

[node name="Username" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 7 )
max_length = 20
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 200.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 7 )
max_length = 30
secret = true
context_menu_enabled = false
placeholder_text = "Password"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 200.0
margin_bottom = 170.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 34.0
custom_constants/separation = 20
alignment = 1

[node name="Login" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 70.0
margin_bottom = 34.0
theme = SubResource( 6 )
text = "LOGIN"

[node name="Register" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 191.0
margin_bottom = 34.0
theme = SubResource( 6 )
text = "REGISTER"

[node name="Cancel" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 200.0
margin_bottom = 72.0
theme = SubResource( 6 )
custom_colors/font_color_hover = Color( 1, 0.121569, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 1, 0.121569, 0.121569, 1 )
text = "CANCEL"

[connection signal="text_entered" from="CenterContainer/VBoxContainer/VBoxContainer2/Username" to="." method="_on_Username_text_entered"]
[connection signal="text_entered" from="CenterContainer/VBoxContainer/VBoxContainer2/Password" to="." method="_on_Password_text_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
